--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title: Clinnbt
+title: WhyJ
 tagline: '좋은 것은 나눠야지! - 개발 블로그'
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: "/"
