--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ version: 1.0.0
 
 # About/contact
 author:
-  name: wooooooak
+  name: leeyongjun
   description: 잘 적어놓고 실수는 한번만 합시다 :D
   gravatar: 2306050fb6056c56f715299aac42215d # md5 hash of your email address
   contact:
