--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
     # facebook:  <hide>
     # twitter:   https://twitter.com/Li_Zhihao
     # weibo:     http://weibo.com/41173780
-    email:     http://mailto:wooooooak@gmail.com
+    email:    mailto:wooooooak@gmail.com
 
 # Navigation (2nd level links supported)
 nav:
