awesome link 페이지 추가

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ nav:
     - '/blog/'
     - { Categories: '/blog/categories/' }
     - { Tags: '/blog/tags/' }
+    - { Awesome Link: '/blog/awesomelink/' }
   About:          
     - '/about/'
   # Github Project: 
