--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title: yongjun
-tagline: ' 반복없는 실수를 위한 개발 블로그'
+title: 쾌락코딩
+tagline: ' 쾌락코딩'
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: "/"
 url: http://wooooooak.github.io
@@ -24,7 +24,7 @@ version: 1.0.0
 
 # About/contact
 author:
-  name: leeyongjun
+  name: LEE YONGJUN
   description: 세상에 공짜는 없다. 그러니 아낌 없이 배풀자 :D
   gravatar: 2306050fb6056c56f715299aac42215d # md5 hash of your email address
   contact:
