--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site Info
 title: 쾌락코딩
-tagline: ' 쾌락코딩'
+tagline: " 쾌락코딩"
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: "/"
 url: http://wooooooak.github.io
-logo: '/public/logo.png'
+logo: "/public/logo.png"
 
 # Site configurations
 gems:
@@ -15,9 +15,9 @@ kramdown:
 excerpt_separator: "<!-- more -->"
 sass:
   style: compressed
-  sass_dir: _scss    
+  sass_dir: _scss
 paginate: 5
-paginate_path: '/blog/page:num'
+paginate_path: "/blog/page:num"
 permalink: pretty
 
 version: 1.0.0
@@ -25,39 +25,39 @@ version: 1.0.0
 # About/contact
 author:
   name: LEE YONGJUN
-  description: 세상에 공짜는 없다. 그러니 아낌 없이 배풀자 :D
+  description: 세상에 공짜는 없다. 그러니 아낌 없이 베풀자 :D
   gravatar: 2306050fb6056c56f715299aac42215d # md5 hash of your email address
   contact:
-    github:    https://github.com/wooooooak
+    github: https://github.com/wooooooak
     # linkedin:  https://www.linkedin.com/in/lizhihao
     # facebook:  <hide>
     # twitter:   https://twitter.com/Li_Zhihao
     # weibo:     http://weibo.com/41173780
-    email:    mailto:wooooooak@gmail.com
+    email: mailto:wooooooak@gmail.com
 
 # Navigation (2nd level links supported)
 nav:
-  Home:           
-    - '/'
-  Blog:           
-    - '/blog/'
-    - { Categories: '/blog/categories/' }
-    - { Tags: '/blog/tags/' }
-  About:          
-    - '/about/'
-  # Github Project: 
+  Home:
+    - "/"
+  Blog:
+    - "/blog/"
+    - { Categories: "/blog/categories/" }
+    - { Tags: "/blog/tags/" }
+  About:
+    - "/about/"
+  # Github Project:
   #   - 'http://wooooooak.github.io/'
 
 # Where are tags and categories displayed
-tag_page: '/blog/tags/'
-category_page: '/blog/categories/'
+tag_page: "/blog/tags/"
+category_page: "/blog/categories/"
 
 hero:
   image: /public/img/main.jpg
-  caption: ''
+  caption: ""
 
 # Puglins
 mathjax: true # whether support mathjax
-google_analytics_token: 'UA-130026668-1' # leave blank if you don't want google analytics
-disqus_short_name: 'https-wooooooak-github-io' # leave blank if you don't want disqus
+google_analytics_token: "UA-130026668-1" # leave blank if you don't want google analytics
+disqus_short_name: "https-wooooooak-github-io" # leave blank if you don't want disqus
 
